infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: davgus-wac-hospital-gateway
  namespace: wac-hospital-davgus
spec:
  gatewayClassName: davgus-wac-hospital-gateway-class
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      protocol: HTTP
      port: 80
